compiler/testData/diagnostics/testsWithJsStdLib/native/extensionFunctionArgument.kt
<!WRONG_EXTERNAL_DECLARATION!>external fun foo(f: Int.() -> Int)<!>

<!WRONG_EXTERNAL_DECLARATION!>external fun bar(vararg f: Int.() -> Int)<!>